Fix title alignment

--- a/public/style/coin.css
+++ b/public/style/coin.css
@@ -1,16 +1,20 @@
 .title {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     padding: 40px;
 }
 
-.title-symbol {
+.title-symbol-icon {
     height: 100px;
     width: 100px;
 }
 .title-name {
     font-size: 70px;
-    padding: 30px;
+    padding: 0 30px;
     font-weight: normal;
+}
+
+.title-symbol {
+    padding-bottom:18px;
 }
